--- a/vendas/src/main/res/values/strings.xml
+++ b/vendas/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PalmVenda</string>
-    <string name="app_versao">Versão apk: 10.6</string>
+    <string name="app_versao">Versão apk: 11.0</string>
     <string name="bco_versao">Versão Banco: 32</string>
     <string name="action_settings">action_settings</string>
+    <string name="nav_header_desc">PalmVenda</string>
+    <string name="navigation_drawer_open">Open</string>
+    <string name="navigation_drawer_close">Close</string>
     <string name="home">Principal</string>
     <string name="btnCliente">Cliente</string>
     <string name="btnConsulta">Consulta</string>
